<resources>
    <string name="app_name">CS2340 Application</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_report_maps">Map</string>
    <string name="title_activity_historical_reports">HistoricalReportsActivity</string>
    <string name="historical_report">Historical Report</string>
    <string name="enter_information">Enter Information To View Historical Report</string>
    <string name="year">Year</string>
    <string name="virus">Virus</string>
    <string name="contaminant">Contaminant</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="long_lat">Long, Lat</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="submit_source">Submit Source Report</string>
    <string name="submit_purity">Submit Purity Report</string>
    <string name="image_desc">Raindrop Image</string>
    <string name="view_water">View Water Availability</string>
    <string name="view_report">View Reports</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register_here">Don\'t have an account? Register here!</string>
    <string name="register">Register</string>
    <string name="email">Email Address</string>
    <string name="address">Address</string>
    <string name="user_type">User Type</string>
    <string name="user">User</string>
    <string name="worker">Worker</string>
    <string name="manager">Manager</string>
    <string name="admin">Admin</string>
    <string name="save">Save</string>
    <string name="location">Location</string>
    <string name="lat_long">(Latitude, Longitude)</string>
    <string name="zero">0,0</string>
    <string name="virus_ppm">Virus PPM:</string>
    <string name="overall">Overall Condition</string>
    <string name="contaminant_ppm">Contaminant PPM:</string>
    <string name="safe">Safe</string>
    <string name="unsafe">Unsafe</string>
    <string name="treatable">Treatable</string>
    <string name="new_user">New User Registration</string>
    <string name="retype_password">Retype Password</string>
    <string name="id_num">ID Number</string>
    <string name="type_water">Type of Water</string>
    <string name="bottled">Bottled</string>
    <string name="lake">Lake</string>
    <string name="well">Well</string>
    <string name="spring">Spring</string>
    <string name="stream">Stream</string>
    <string name="other_type">Other Type:</string>
    <string name="condition_water">Condition of Water</string>
    <string name="waste">Waste</string>
    <string name="treatable_clear">Treatable-Clear</string>
    <string name="treatable_muddy">Treatable-Muddy</string>
    <string name="potable">Potable</string>
    <string name="welcome">Welcome to Water Reporter</string>
    <string name="login">Login</string>
    <string name="raindrop">Rain drop, drop top</string>
    <string name="report_location">Report Location:</string>
    <string name="report_date">Report Date:</string>
    <string name="submitted">Submitted By:</string>
    <string name="report_type">Report Type</string>
    <string name="zero_text">zero</string>
    <string name="unable_error">Error: Unable to create user.</string>
</resources>
