<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="14dp"
        android:layout_weight="1"
        android:text="@string/enter_information"
        android:textIsSelectable="true"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/year"
        android:layout_above="@+id/contaminantType"
        android:layout_alignStart="@+id/textView13"
        android:layout_marginBottom="38dp" />

    <RadioGroup
        android:id="@+id/contaminantType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_above="@+id/cancelButton"
        android:layout_alignStart="@+id/year"
        android:layout_marginBottom="17dp"
        android:layout_alignEnd="@+id/submitButton">

        <RadioButton
            android:id="@+id/virusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/contaminantButton"
            android:layout_alignBottom="@+id/contaminantButton"
            android:layout_alignEnd="@+id/submitButton"
            android:layout_marginEnd="42dp"
            android:layout_weight="1"
            android:text="@string/virus" />

        <RadioButton
            android:id="@+id/contaminantButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/cancelButton"
            android:layout_alignStart="@+id/year"
            android:layout_marginBottom="44dp"
            android:layout_weight="1"
            android:text="@string/contaminant" />
    </RadioGroup>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/year"
        android:layout_marginBottom="124dp"
        android:onClick="onSubmitPressed" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_alignBaseline="@+id/submitButton"
        android:layout_alignBottom="@+id/submitButton"
        android:layout_marginEnd="18dp"
        android:onClick="onCancelPressed" />

    <EditText
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/year"
        android:layout_below="@+id/textView13"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:inputType="textShortMessage|textLongMessage|textPersonName"
        android:hint="@string/long_lat" />

</RelativeLayout>
