<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <!--android:background="#ffffffff"-->

    <Button
            android:text="@string/edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profile"
            android:onClick="onProfilePressed"
            android:layout_below="@+id/logout"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="11dp"/>
    <Button
            android:text="@string/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logout"
            android:onClick="onLogoutPressed"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/imageView"
            android:textColor="@color/reddish"/>
    <Button
            android:text="@string/submit_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/source"
            android:onClick="sourceReport"
            android:layout_marginTop="50dp"
            android:layout_below="@+id/imageView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:textColor="@color/colorPrimary"/>
    <Button
            android:text="@string/submit_purity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/purity"
            android:onClick="purityReport"
            android:visibility="invisible"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:textColor="@color/colorPrimary"/>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/rounded_icon"
            android:id="@+id/imageView"
            android:scaleType="fitStart"
            android:layout_alignBottom="@+id/profile"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/profile"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/image_desc"/>
    <Button
            android:text="@string/view_water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            android:onClick="onAvailabilityClicked"
            android:layout_marginBottom="57dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"/>
    <Button
            android:text="@string/view_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:onClick="onViewReportsClicked"
            android:layout_above="@+id/button3"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="11dp"
            android:layout_alignParentEnd="true"
            android:textColor="@android:color/holo_green_dark" />

    <Button
        android:text="@string/historical_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/historical_report"
        android:layout_alignParentEnd="true"
        android:visibility="invisible"
        android:onClick="onHistoricalReportClicked"/>
</RelativeLayout>