<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@mipmap/water_droplet"
    tools:context="edu.gatech.cs2340.cs2340application.controller.WelcomeActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:id="@+id/textView"
            android:layout_marginBottom="21dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"/>

    <Button android:id="@+id/login_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@color/greyBlue"
            android:layout_marginTop="85dp" android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:onClick="onLoginPressed"
            android:textColor="@color/white" android:textSize="18sp"/>

    <Button android:id="@+id/register_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/greyBlue"
            android:text="@string/register"
            android:layout_marginTop="14dp"
            android:onClick="onRegisterPressed"
            android:layout_below="@+id/login_button"
            android:layout_alignParentStart="true"
            android:textColor="@color/white" android:textSize="18sp"/>

    <TextView
        android:text="@string/raindrop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView"
        android:layout_marginBottom="60dp"
        android:id="@+id/Raindrop"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:textSize="27sp"
        android:textColor="@android:color/background_light"
        android:fontFamily="cursive" />

</RelativeLayout>
